compiler/tools/fpp-to-json/test/importedTopologies.ref.txt
fpp-to-json
[ local path prefix ]/compiler/tools/fpp-to-json/test/importedTopologies.fpp:19.3
  private instance c2
  ^
error: topology member expected
